--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,18 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["webrtc", "socket.io", "signaling"],
+  "keywords": [
+    "webrtc",
+    "socket.io",
+    "signaling"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "^4.7.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "selfsigned": "^3.0.1",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
