--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "node-forge": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
