--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-forge": "^1.3.1",
+    "redis": "^5.8.3",
     "selfsigned": "^3.0.1",
     "socket.io": "^4.7.2"
   },
