--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,23 @@
 FROM node:18-alpine
 
+# Create a non-root user
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001
+
 WORKDIR /app
 
+# Copy package files and install dependencies as root
 COPY package*.json ./
-
 RUN npm ci --only=production
 
+# Copy application files
 COPY . .
+
+# Change ownership of the app directory to the non-root user
+RUN chown -R nodejs:nodejs /app
+
+# Switch to non-root user
+USER nodejs
 
 EXPOSE 5010
 
